Access donut data through isolate scope

--- a/www/index.html
+++ b/www/index.html
@@ -9,8 +9,9 @@
 </head>
 <body ng-app="hackApp">
 
-  <donut-chart></donut-chart>
-  <donut-chart></donut-chart>
+  <donut-chart data="[8, 3, 7]"></donut-chart>
+  <donut-chart data="[2, 5, 9]"></donut-chart>
+  <donut-chart data="[6, 2, 3]"></donut-chart>
 
   <script src="components/angular/angular.js"></script>
   <script src="components/d3/d3.js"></script>
