--- a/www/index.html
+++ b/www/index.html
@@ -3,20 +3,21 @@
 <head lang="en">
   <meta charset="utf-8">
 
-  <title>ANZ HackDay</title>
+  <title>PAYD</title>
 
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css">
 </head>
-<body ng-app="hackApp">
+<body ng-app="payd">
 
-  <donut-chart data="[8, 3, 7]"></donut-chart>
-  <donut-chart data="[2, 5, 9]"></donut-chart>
-  <donut-chart data="[6, 2, 3]"></donut-chart>
+  <div class="container" ng-controller="MainCtrl">
+    <donut-chart data="chart"></donut-chart>
+  </div>
 
   <script src="components/angular/angular.js"></script>
   <script src="components/d3/d3.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
+  <script src="js/controllers/mainCtrl.js"></script>
 </body>
 </html>
