[deps] fix versions

--- a/www/index.html
+++ b/www/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
+<html lang="en">
+<head>
   <meta charset="utf-8">
 
   <title>PAYD</title>
 
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css">
+  <link rel="stylesheet" href="components/nvd3/nv.d3.css">
 </head>
 <body ng-app="payd">
 
@@ -15,6 +16,8 @@
 
   <script src="components/angular/angular.js"></script>
   <script src="components/d3/d3.js"></script>
+  <script src="components/nvd3/nv.d3.js"></script>
+  <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
