Use angular-nvd3 for charting

--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <body ng-app="payd">
 
   <div class="container" ng-controller="MainCtrl">
-    <donut-chart data="chart"></donut-chart>
+    <nvd3 options="options" data="data"></nvd3>
   </div>
 
   <script src="components/angular/angular.js"></script>
