--- a/www/index.html
+++ b/www/index.html
@@ -7,17 +7,39 @@
 
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="components/nvd3/nv.d3.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body ng-app="payd">
 
+  <nav class="navbar navbar-default navbar-static-top">
+    <div class="container">
+      <div class="navbar-header">
+        <a class="navbar-brand" ui-sref="#">PAYd</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li><a ui-sref="home">Home</a></li>
+        <li><a ui-sref="transactions">Transactions</a></li>
+        <li><a ui-sref="analyse">Analyse</a></li>
+        <li><a ui-sref="about">About</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <nav class="navbar" role="navigation">
+
+  </nav>
+
   <div class="container" ng-controller="MainCtrl">
-    <nvd3 options="options" data="data"></nvd3>
+
+    <div ui-view></div>
+
   </div>
 
   <script src="components/angular/angular.js"></script>
   <script src="components/d3/d3.js"></script>
   <script src="components/nvd3/nv.d3.js"></script>
   <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
+  <script src="components/angular-ui-router/release/angular-ui-router.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
