--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,8 @@
       <div class="navbar-header">
         <a class="navbar-brand" ui-sref="#">PAYd</a>
       </div>
-      <ul class="nav navbar-nav">
+
+      <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="transactions">Transactions</a></li>
         <li><a ui-sref="analyse">Analyse</a></li>
