--- a/www/index.html
+++ b/www/index.html
@@ -14,11 +14,10 @@
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="#">PAYd</a>
+        <a class="navbar-brand" ui-sref="home">PAYd</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="home">Home</a></li>
         <li><a ui-sref="transactions">Transactions</a></li>
         <li><a ui-sref="analyse">Analyse</a></li>
         <li><a ui-sref="about">About</a></li>
@@ -26,14 +25,8 @@
     </div>
   </nav>
 
-  <nav class="navbar" role="navigation">
-
-  </nav>
-
   <div class="container" ng-controller="MainCtrl">
-
     <div ui-view></div>
-
   </div>
 
   <script src="components/angular/angular.js"></script>
@@ -41,6 +34,7 @@
   <script src="components/nvd3/nv.d3.js"></script>
   <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
   <script src="components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="components/angular-smart-table/dist/smart-table.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
