Add UI Bootstrap for categories per wireframes

--- a/www/index.html
+++ b/www/index.html
@@ -35,9 +35,13 @@
   <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
   <script src="components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="components/angular-smart-table/dist/smart-table.js"></script>
+  <!-- using a custom build of UI Bootstrap, manually downloaded -->
+  <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-0.12.1.js"></script>
+  <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-0.12.1.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
   <script src="js/controllers/mainCtrl.js"></script>
+  <script src="js/controllers/categoryAccordionCtrl.js"></script>
 </body>
 </html>
