Set up bar chart on analyse page with nested routes

--- a/www/index.html
+++ b/www/index.html
@@ -43,5 +43,7 @@
   <script src="js/directives/donutChart.js"></script>
   <script src="js/controllers/mainCtrl.js"></script>
   <script src="js/controllers/categoryAccordionCtrl.js"></script>
+  <script src="js/controllers/donutChartCtrl.js"></script>
+  <script src="js/controllers/barChartCtrl.js"></script>
 </body>
 </html>
