Fix nav link for child route

--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
 
       <ul class="nav navbar-nav navbar-right">
         <li><a ui-sref="transactions">Transactions</a></li>
-        <li><a ui-sref="analyse">Analyse</a></li>
+        <li><a ui-sref="analyse.donut">Analyse</a></li>
         <li><a ui-sref="about">About</a></li>
       </ul>
     </div>
