Hide the transaction list

--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
       </div>
 
       <ul class="nav navbar-nav navbar-right">
-        <li><a ui-sref="transactions">Transactions</a></li>
+        <!-- <li><a ui-sref="transactions">Transactions</a></li> -->
         <li><a ui-sref="analyse.donut">Analyse</a></li>
         <li><a ui-sref="about">About</a></li>
       </ul>
@@ -35,6 +35,7 @@
   <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
   <script src="components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="components/angular-smart-table/dist/smart-table.js"></script>
+
   <!-- using a custom build of UI Bootstrap, manually downloaded -->
   <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-0.12.1.js"></script>
   <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-0.12.1.js"></script>
