--- a/www/index.html
+++ b/www/index.html
@@ -35,10 +35,8 @@
   <script src="components/angular-nvd3/dist/angular-nvd3.js"></script>
   <script src="components/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="components/angular-smart-table/dist/smart-table.js"></script>
-
-  <!-- using a custom build of UI Bootstrap, manually downloaded -->
-  <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-0.12.1.js"></script>
-  <script src="components/ui-bootstrap-custom-build/ui-bootstrap-custom-tpls-0.12.1.js"></script>
+  <script src="components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 
   <script src="js/app.js"></script>
   <script src="js/directives/donutChart.js"></script>
