--- a/www/index.html
+++ b/www/index.html
@@ -44,5 +44,38 @@
   <script src="js/controllers/categoryAccordionCtrl.js"></script>
   <script src="js/controllers/donutChartCtrl.js"></script>
   <script src="js/controllers/barChartCtrl.js"></script>
+
+
+  <script>
+    angular.module("template/accordion/accordion-group.html", []).run(["$templateCache", function($templateCache) {
+      $templateCache.put("template/accordion/accordion-group.html",
+        "<div class=\"panel panel-default\">\n" +
+        "  <div class=\"panel-heading\">\n" +
+        " "+
+      "      <div class=\"pull-right dropdown\" dropdown > " +
+      "        <a class=\"dropdown-toggle dropdown-dots\" dropdown-toggle></a> " +
+      "<ul class=\"dropdown-menu\"> " +
+        "<li>" +
+          "<a href>Test</a>" +
+        "</li>" +
+      "</ul> "+
+      "      </div>" +
+        "    <h4 class=\"panel-title\">\n" +
+        "      <a href class=\"accordion-toggle\" ng-click=\"toggleOpen()\" accordion-transclude=\"heading\"><span ng-class=\"{'text-muted': isDisabled}\">{{heading}}</span></a>\n" +
+        "    </h4>\n" +
+        "  </div>\n" +
+        "  <div class=\"panel-collapse\" collapse=\"!isOpen\">\n" +
+        "	  <div class=\"panel-body\" ng-transclude></div>\n" +
+        "  </div>\n" +
+        "</div>\n" +
+        "");
+    }]);
+
+    angular.module("template/accordion/accordion.html", []).run(["$templateCache", function($templateCache) {
+      $templateCache.put("template/accordion/accordion.html",
+        "<div class=\"panel-group\" ng-transclude></div>");
+    }]);
+
+  </script>
 </body>
 </html>
