--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" ui-sref="home">PAYd</a>
+        <a class="navbar-brand" ui-sref="home"><img src="img/anz-logo.png" class="logo" alt="">PayD</a>
       </div>
 
       <ul class="nav navbar-nav navbar-right">
