--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
     angular.module("template/accordion/accordion-group.html", []).run(["$templateCache", function($templateCache) {
       $templateCache.put("template/accordion/accordion-group.html",
         "<div class=\"panel panel-default\">\n" +
-        "  <div class=\"panel-heading\">\n" +
+        "  <div class=\"panel-heading payment-box\">\n" +
         " "+
       "      <div class=\"pull-right dropdown\" dropdown > " +
       "        <a class=\"dropdown-toggle dropdown-dots\" dropdown-toggle></a> " +
@@ -65,7 +65,7 @@
         "    </h4>\n" +
         "  </div>\n" +
         "  <div class=\"panel-collapse\" collapse=\"!isOpen\">\n" +
-        "	  <div class=\"panel-body\" ng-transclude></div>\n" +
+        "	  <div class=\"panel-body history-detail\" ng-transclude></div>\n" +
         "  </div>\n" +
         "</div>\n" +
         "");
