--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,7 @@
       $templateCache.put("template/accordion/accordion-group.html",
         "<div class=\"panel panel-default\">\n" +
         "  <div class=\"panel-heading payment-box\">\n" +
-        " "+
+        " " +
       "      <div class=\"pull-right dropdown\" dropdown > " +
       "        <a class=\"dropdown-toggle dropdown-dots\" dropdown-toggle></a> " +
       "<ul class=\"dropdown-menu\"> " +
@@ -60,6 +60,7 @@
         "</li>" +
       "</ul> "+
       "      </div>" +
+        " <i class=\"glyphicon glyphicon-ok pull-right\"></i>"+ 
         "    <h4 class=\"panel-title\">\n" +
         "      <a href class=\"accordion-toggle\" ng-click=\"toggleOpen()\" accordion-transclude=\"heading\"><span ng-class=\"{'text-muted': isDisabled}\">{{heading}}</span></a>\n" +
         "    </h4>\n" +
