--- a/www/index.html
+++ b/www/index.html
@@ -56,11 +56,11 @@
       "        <a class=\"dropdown-toggle dropdown-dots\" dropdown-toggle></a> " +
       "<ul class=\"dropdown-menu\"> " +
         "<li>" +
-          "<a href>Test</a>" +
+          "<a href>Arhive All</a>" +
         "</li>" +
       "</ul> "+
       "      </div>" +
-        " <i class=\"glyphicon glyphicon-ok pull-right\"></i>"+ 
+        " <i class=\"glyphicon glyphicon-ok pull-right\"></i>"+
         "    <h4 class=\"panel-title\">\n" +
         "      <a href class=\"accordion-toggle\" ng-click=\"toggleOpen()\" accordion-transclude=\"heading\"><span ng-class=\"{'text-muted': isDisabled}\">{{heading}}</span></a>\n" +
         "    </h4>\n" +
