--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,10 @@
     </div>
   </nav>
 
-  <div class="container" ng-controller="MainCtrl">
-    <div ui-view></div>
+  <div ng-controller="MainCtrl">
+    <div ui-view>
+
+    </div>
   </div>
 
   <script src="components/angular/angular.js"></script>
