--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>PAYD</title>
+  <title>PayD</title>
 
   <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="components/nvd3/nv.d3.css">
@@ -58,7 +58,7 @@
       "        <a class=\"dropdown-toggle dropdown-dots\" dropdown-toggle></a> " +
       "<ul class=\"dropdown-menu\"> " +
         "<li>" +
-          "<a href>Arhive All</a>" +
+          "<a href>Archive All</a>" +
         "</li>" +
       "</ul> "+
       "      </div>" +
