--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,8 @@
       <ul class="nav navbar-nav navbar-right">
         <!-- <li><a ui-sref="transactions">Transactions</a></li> -->
         <li><a>View</a></li>
-        <li><a ui-sref="analyse.donut" class="graph"><img src="img/svg/list-view.svg"></a></li>
-        <li><a ui-sref="analyse.bar" class="graph"><img src="img/svg/graph-view.svg"></a></li>
+        <li><a ui-sref="analyse.donut" class="graph graph-donut"><img src="img/svg/donut.svg"></a></li>
+        <li><a ui-sref="analyse.bar" class="graph"><img src="img/svg/list-view.svg"></a></li>
         <!-- <li><a ui-sref="about">About</a></li> -->
       </ul>
     </div>
